# SettlersSix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SettlersSix.sln  SettlersSix.vcxproj  SettlersSix.vcxproj.filters  Texture.cpp  Texture.h  main.cpp  run.bat  run.sh
.github/: FUNDING.yml
Art/: tiles.aseprite
SDL2_image/cmake/: sdl2_image-config.cmake
include/: seecs.h
src/: Card.cpp  Card.h  DevelopmentCard.cpp  DevelopmentCard.h  GameBoard.cpp  GameBoard.h  GameState.cpp  GameState.h  House.cpp  House.h  LargestArmyCard.cpp  LargestArmyCard.h  LongestRoadCard.cpp  LongestRoadCard.h  Player.cpp  Player.h  ResourceCard.cpp  ResourceCard.h  Road.cpp  Road.h  Skyscraper.cpp  Skyscraper.h  Texture.cpp  Texture.h  Thief.cpp  Thief.h  main.cpp  main.h
